--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   mod, modding, cfw, ntrboot, gm9, dercypt9, backup,
 
   ">
-  <link href="style.css" rel = "stylesheet">
-  <script src="script.js"></script>
+  <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
+  <script src="https://projectr4vival.github.io/script.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     <table width = 100%>
       <tr>
         <td id = "logo">
-          <a href = "index.html">
+          <a href = "https://projectr4vival.github.io/">
             <img src = "logo.png">
           </a>
         </td>
