--- a/kernel.html
+++ b/kernel.html
@@ -34,8 +34,8 @@
   mod, modding, cfw, ntrboot, gm9, dercypt9, backup,
 
   ">
-  <link href="style.css" rel = "stylesheet">
-  <script src="script.js"></script>
+  <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
+  <script src="https://projectr4vival.github.io/script.js"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     <table width = 100%>
       <tr>
         <td id = "logo">
-          <a href = "index.html">
+          <a href = "https://projectr4vival.github.io/">
             <img src = "logo.png">
           </a>
         </td>
@@ -81,7 +81,7 @@
       <li><a href = "#">R4 SDHC - r4isdhc.com</a></li>
       <li><a href = "#">R4 SDHC - r4isdhc.in</a></li>
 
-      <li><a href = "r4ultra.html">R4 Ultra - r4ultra.com</a></li>
+      <li><a href = "r4ultra">R4 Ultra - r4ultra.com</a></li>
       <li><a href = "#">R4i SDHC HK - r4i-sdhc.hk</a></li>
       <li><a href = "#">R4i Gold .CC - r4igold.cc</a></li>
       <li><a href = "#">R4 V - r4-v.com</a></li>
