--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <tr>
         <td id = "logo">
           <a href = "https://projectr4vival.github.io/">
-            <img src = "logo.png">
+            <img src = "https://projectr4vival.github.io/logo.png">
           </a>
         </td>
         <td align = right>
@@ -55,7 +55,7 @@
             <li><a href = "dumping.html">Dumping</a></li>
             <li><a href = "homebrew.html">Homebrew</a></li> 
             <li><a href = "credits.html">Credits</a></li> 
-            <li><a href = "" target = "_blank"><img src = "discord.png"></a></li> 
+            <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
           </ul> 
         </td>
       </tr>
