--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -45,7 +45,7 @@
       <tr>
         <td id = "logo">
           <a href = "https://projectr4vival.github.io/">
-            <img src = "logo.png">
+            <img src = "https://projectr4vival.github.io/logo.png">
           </a>
         </td>
         <td align = right>
@@ -67,10 +67,10 @@
     <table id = "container" width="100%">
       <tr>
         <td align = left style = "padding-left: 25px">
-          <img src="r4ultra/logo.png">
+          <img src="logo.png">
         </td>
         <td align = right>
-          <img src="r4ultra/banner.png">
+          <img src="banner.png">
         </td> 
       </tr>
     </table>
@@ -94,8 +94,8 @@
     <table id = "container">
       
       <tr>
-        <td><a href="r4sdhc.html"><img id="highlight" src="r4ultra/r4sdhc.png"></a></td>
-        <td><a href="r4i.html"><img id="highlight" src="r4ultra/r4i.png"></a></td>
+        <td><a href="r4sdhc.html"><img id="highlight" src="r4sdhc.png"></a></td>
+        <td><a href="r4i.html"><img id="highlight" src="r4i.png"></a></td>
       </tr>
 
       <tr>
