--- a/kernel.html
+++ b/kernel.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset = "utf-8">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
+  <link rel="icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
   <title>Kernel - Project R4vival</title>
   <meta name="description" content="The best place where to find the right kernel for your flashcard.">
   <meta name="keywords" content="
+
+  project, r4vival,
 
   flashcard, kernel, firmware, update, dump,
 
@@ -51,10 +53,10 @@
         <td align = right>
           <ul id = "sub_header"> 
             <li><a href = "#content">About</a></li> 
-            <li><a href = "kernel.html">Kernel</a></li> 
-            <li><a href = "dumping.html">Dumping</a></li>
-            <li><a href = "homebrew.html">Homebrew</a></li> 
-            <li><a href = "credits.html">Credits</a></li>
+            <li><a href = "https://projectr4vival.github.io/kernel.html">Kernel</a></li> 
+            <li><a href = "https://projectr4vival.github.io/dumping.html">Dumping</a></li>
+            <li><a href = "https://projectr4vival.github.io/homebrew.html">Homebrew</a></li> 
+            <li><a href = "https://projectr4vival.github.io/credits.html">Credits</a></li>
             <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
           </ul> 
         </td>
@@ -97,7 +99,7 @@
     <table width = "100%">
       <tr>
         <td>This site is not affiliated with the Nintendo&reg company in any way.</td>
-        <td align = "right">&copy 2021 Project R4vival - <a href = "">Source<img src = "github.png"></a></td>
+        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io">Source<img src = "github.png"></a></td>
       </tr>
     </table>
   </div>
