--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <p>
       It... depends. Mostly on the country you live in. But in every country is illegal to use them to run ROM images of games you do not physically or digitally own.
       <br>
-      If you wanna know more about which countries they had legal issues in, check <a href = "https://en.wikipedia.org/wiki/R4_cartridge#Legal_issues">Wikipedia</a>.
+      If you wanna know more about which countries they had legal issues in, check <a href = "https://en.wikipedia.org/wiki/R4_cartridge#Legal_issues" target="_blank">Wikipedia</a>.
     </p>
 
   </div>
@@ -127,7 +127,7 @@
     <table width = "100%">
       <tr>
         <td>This site is not affiliated with the Nintendo&reg company in any way.</td>
-        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io">Source<img src = "github.png"></a></td>
+        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io" target="_blank">Source<img src = "https://projectr4vival.github.io/github.png"></a></td>
       </tr>
     </table>
   </div>
