--- a/kernel.html
+++ b/kernel.html
@@ -99,7 +99,7 @@
     <table width = "100%">
       <tr>
         <td>This site is not affiliated with the Nintendo&reg company in any way.</td>
-        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io">Source<img src = "github.png"></a></td>
+        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io" target="_blank">Source<img src = "https://projectr4vival.github.io/github.png"></a></td>
       </tr>
     </table>
   </div>
