--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -57,7 +57,7 @@
             <li><a href = "https://projectr4vival.github.io/dumping.html">Dumping</a></li>
             <li><a href = "https://projectr4vival.github.io/homebrew.html">Homebrew</a></li> 
             <li><a href = "https://projectr4vival.github.io/credits.html">Credits</a></li>
-            <li><a href = "" target = "blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
+            <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
           </ul> 
         </td>
       </tr>
@@ -111,8 +111,8 @@
     <br>
 
     <p><b>
-      <a href = "https://web.archive.org/web/20120908033555/http://www.r4ultra.com/index.htm" target = "blank">
-      Official Website <img src="url.png" height="16px" style="padding-left: 3px">
+      <a href = "https://web.archive.org/web/20120908033555/http://www.r4ultra.com/index.htm" target = "_blank">
+      Official Website <img src="https://projectr4vival.github.io/url.png" height="16px" style="padding-left: 3px">
     </a>
     </b></p>
     
@@ -124,7 +124,7 @@
     <table width = "100%">
       <tr>
         <td>This site is not affiliated with the Nintendo&reg company in any way.</td>
-        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io">Source<img src = "github.png"></a></td>
+        <td align = "right">&copy 2021 Project R4vival - <a href = "https://github.com/projectr4vival/projectr4vival.github.io" target="_blank">Source<img src = "https://projectr4vival.github.io/github.png"></a></td>
       </tr>
     </table>
   </div>
