Remove .html extensions
As it's natively supported by github pages

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <td align = right>
           <ul id = "sub_header"> 
             <li><a href = "#content">About</a></li> 
-            <li><a href = "https://projectr4vival.github.io/kernel.html">Kernel</a></li> 
-            <li><a href = "https://projectr4vival.github.io/dumping.html">Dumping</a></li>
-            <li><a href = "https://projectr4vival.github.io/homebrew.html">Homebrew</a></li> 
-            <li><a href = "https://projectr4vival.github.io/credits.html">Credits</a></li> 
+            <li><a href = "https://projectr4vival.github.io/kernel">Kernel</a></li> 
+            <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
+            <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
+            <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li> 
             <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
           </ul> 
         </td>
@@ -78,9 +78,9 @@
     <br>
     <p><b>Get Started</b></p>
     <p>
-      You can search for the right kernel for your card in our <a href = "kernel.html">Kernel Database</a>.
+      You can search for the right kernel for your card in our <a href = "kernel">Kernel Database</a>.
       <br>
-      Or you can check the <a href = "homebrew.html">Homebrew</a> section to find out about cool homebrew you can run on your flashcard.
+      Or you can check the <a href = "homebrew">Homebrew</a> section to find out about cool homebrew you can run on your flashcard.
     </p>
     <br>
     <p><b>Why?</b></p>
