--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -53,10 +53,10 @@
         <td align = right>
           <ul id = "sub_header"> 
             <li><a href = "#content">About</a></li> 
-            <li><a href = "https://projectr4vival.github.io/kernel.html">Kernel</a></li> 
-            <li><a href = "https://projectr4vival.github.io/dumping.html">Dumping</a></li>
-            <li><a href = "https://projectr4vival.github.io/homebrew.html">Homebrew</a></li> 
-            <li><a href = "https://projectr4vival.github.io/credits.html">Credits</a></li>
+            <li><a href = "https://projectr4vival.github.io/kernel">Kernel</a></li> 
+            <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
+            <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
+            <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li>
             <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
           </ul> 
         </td>
@@ -96,13 +96,13 @@
     <table id = "container">
       
       <tr>
-        <td><a href="r4sdhc.html"><img id="highlight" src="r4sdhc.png"></a></td>
-        <td><a href="r4i.html"><img id="highlight" src="r4i.png"></a></td>
+        <td><a href="r4sdhc"><img id="highlight" src="r4sdhc.png"></a></td>
+        <td><a href="r4i"><img id="highlight" src="r4i.png"></a></td>
       </tr>
 
       <tr>
-        <td><a href="r4sdhc.html"><b>R4 SDHC Ultra</b></a></td>
-        <td><a href="r4i.html"><b>R4i Ultra</b></a></td>
+        <td><a href="r4sdhc"><b>R4 SDHC Ultra</b></a></td>
+        <td><a href="r4i"><b>R4i Ultra</b></a></td>
       </tr>
       
     </table>
