--- a/kernel.html
+++ b/kernel.html
@@ -53,10 +53,10 @@
         <td align = right>
           <ul id = "sub_header"> 
             <li><a href = "#content">About</a></li> 
-            <li><a href = "https://projectr4vival.github.io/kernel.html">Kernel</a></li> 
-            <li><a href = "https://projectr4vival.github.io/dumping.html">Dumping</a></li>
-            <li><a href = "https://projectr4vival.github.io/homebrew.html">Homebrew</a></li> 
-            <li><a href = "https://projectr4vival.github.io/credits.html">Credits</a></li>
+            <li><a href = "https://projectr4vival.github.io/kernel">Kernel</a></li> 
+            <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
+            <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
+            <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li>
             <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
           </ul> 
         </td>
