--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
   homebrew, gba, gb, gbc, nes, emulator, dscraft, moonshell,
 
-  mod, modding, cfw, ntrboot, gm9, dercypt9, backup,
+  mod, modding, cfw, ntrboot, gm9, deypt9, backup,
 
   ">
-  <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
-  <script src="https://projectr4vival.github.io/script.js"></script>
+  <link href="style.css" rel = "stylesheet">
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -52,12 +52,22 @@
         </td>
         <td align = right>
           <ul id = "sub_header"> 
-            <li><a href = "#content">About</a></li> 
+            <li><a href = "https://projectr4vival.github.io/">Home</a></li> 
             <li><a href = "https://projectr4vival.github.io/kernel">Kernel</a></li> 
             <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
             <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
             <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li> 
             <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
+            <li> 
+              <div class="dropdown">
+                <img src = "https://projectr4vival.github.io/language.png" onclick="showDropdown()" class="dropbtn">
+                  <div id="myDropdown" class="dropdown-content">
+                    <a href="https://projectr4vival.github.io/">English</a>
+                    <hr>
+                    <a href="#">Italiano</a>
+                  </div>
+              </div> 
+            </li> 
           </ul> 
         </td>
       </tr>
