--- a/kernel.html
+++ b/kernel.html
@@ -52,8 +52,8 @@
         </td>
         <td align = right>
           <ul id = "sub_header"> 
-            <li><a href = "https://projectr4vival.github.io/">About</a></li> 
-            <li><a href = "https://projectr4vival.github.io/kernel">Home</a></li> 
+            <li><a href = "https://projectr4vival.github.io/">Home</a></li> 
+            <li><a href = "https://projectr4vival.github.io/kernel">Kernel</a></li> 
             <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
             <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
             <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li>
