--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
             <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
             <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li> 
-            <li><a href = "" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
+            <li><a href = "https://projectr4vival.github.io/discord" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
             <li> 
               <div class="dropdown">
                 <img src = "https://projectr4vival.github.io/language.png" onclick="showDropdown()" class="dropbtn">
