--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -5,7 +5,7 @@
   <meta charset = "utf-8">
   <link rel="icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="https://projectr4vival.github.io/favicon.ico" type="image/x-icon" /> <!-- To support IE as well -->
-  <title>R4 Ultra - Project R4vival</title>
+  <title>R4i Ultra - Project R4vival</title>
   <meta name="description" content="The best place where to find the right kernel for your flashcard.">
   <meta name="keywords" content="
 
@@ -76,13 +76,55 @@
 
   <div id = "content">
 
-    <table id = "container" width="100%">
+    <table id = "container">
       <tr>
         <td align = left style = "padding-left: 25px">
           <img src="logo.png">
         </td>
-        <td align = right>
-          <img src="banner.png">
+      </tr>
+    </table>
+
+    <table width="100%">
+      <tr>
+        <td align = left style = "padding-left: 25px">
+         <p><h1>R4i Ultra</h1></p>
+        </td>
+        <td id = "container" align = right>
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+
+              <!-- Full-width images with number and caption text -->
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="1.jpg" style="width:100%">
+                <div class="text">Caption Text</div>
+              </div>
+
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="2.jpg" style="width:100%">
+                <div class="text">Caption Two</div>
+              </div>
+
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="3.jpg" style="width:100%">
+                <div class="text">Caption Three</div>
+              </div>
+
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
+              <span class="dot" onclick="currentSlide(3)"></span>
+            </div> 
+
         </td> 
       </tr>
     </table>
@@ -107,7 +149,7 @@
       
       <tr>
         <td><a href="r4sdhc"><img id="highlight" src="r4sdhc.png"></a></td>
-        <td><a href="r4i.html"><img id="highlight" src="r4i.png"></a></td>
+        <td><a href="r4i"><img id="highlight" src="r4i.png"></a></td>
       </tr>
 
       <tr>
