--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -95,26 +95,14 @@
 
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="1.jpg" style="width:100%">
-                <div class="text">Caption Text</div>
-              </div>
-
-              <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="2.jpg" style="width:100%">
-                <div class="text">Caption Two</div>
-              </div>
-
-              <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="3.jpg" style="width:100%">
-                <div class="text">Caption Three</div>
+                <img class="mySlides" src="1.jpg">
+                <img class="mySlides" src="2.jpg">
+                <img class="mySlides" src="3.jpg">
               </div>
 
               <!-- Next and previous buttons -->
-              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+              <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+              <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
             </div>
             <br>
 
