--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -37,7 +37,7 @@
 
   ">
   <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
-  <script src="https://projectr4vival.github.io/script.js"></script>
+  <script src="file:///C:/Users/Davide/Documents/GitHub/projectr4vival.github.io/script.js"></script>
 </head>
 
 <body>
