--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -89,20 +89,21 @@
         <td align = left style = "padding-left: 25px">
          <p><h1>R4i Ultra</h1></p>
         </td>
-        <td id = "container" align = right>
-            <!-- Slideshow container -->
-            <div class="slideshow-container">
+        <td width="20%">
 
-              <!-- Full-width images with number and caption text -->
-              <img class="mySlides" src="1.jpg">
-              <img class="mySlides" src="2.jpg">
-              <img class="mySlides" src="3.jpg">
+          <div id = "container">
 
-              <!-- Next and previous buttons -->
-              <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-              <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
-            </div>
+            <img class="mySlides" src="1.png">
+            <img class="mySlides" src="2.jpg">
+            <img class="mySlides" src="3.jpeg">
+
+            <!-- Next and previous buttons -->
+            <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+            <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+
             <br>
+
+          </div>
 
             <!-- The dots/circles -->
             <div style="text-align:center">
