--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -37,7 +37,7 @@
 
   ">
   <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
-  <script src="file:///C:/Users/Davide/Documents/GitHub/projectr4vival.github.io/script.js"></script>
+  <script src="https://projectr4vival.github.io/script.js"></script>
 </head>
 
 <body>
@@ -107,7 +107,7 @@
       
       <tr>
         <td><a href="r4sdhc"><img id="highlight" src="r4sdhc.png"></a></td>
-        <td><a href="r4i.html"><img id="highlight" src="r4i.png"></a></td>
+        <td><a href="r4i"><img id="highlight" src="r4i.png"></a></td>
       </tr>
 
       <tr>
