--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -88,29 +88,36 @@
       <tr>
         <td align = left style = "padding-left: 25px">
          <p><h1>R4i Ultra</h1></p>
+         <p>Lorem ispum roba random</p> 
         </td>
-        <td width="20%">
+        <td width="25%">
 
-          <div id = "container">
+          <div class="slideshow-container" id = "container">
 
-            <img class="mySlides" src="1.png">
-            <img class="mySlides" src="2.jpg">
-            <img class="mySlides" src="3.jpeg">
+            <!-- Full-width images with number and caption text -->
+            <div id = "slide1" class="mySlides fade">
+              <img src="1.png" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+              <img src="2.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+              <img src="3.jpeg" style="width:100%">
+            </div>
 
             <!-- Next and previous buttons -->
-            <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-            <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
-
-            <br>
-
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
           </div>
 
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-              <span class="dot" onclick="currentSlide(1)"></span>
-              <span class="dot" onclick="currentSlide(2)"></span>
-              <span class="dot" onclick="currentSlide(3)"></span>
-            </div> 
+          <!-- The dots/circles -->
+          <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div> 
 
         </td> 
       </tr>
@@ -118,8 +125,8 @@
 
     <br>
 
-    <p><b>Description</b></p>
-    <p>R4 SDHC & R4i Ultra are SLOT-1 flashcards for NDS series consoles (the R4i supports DSi). They're the same size as an original card. R4 Ultra cards are an upgraded version of R4. They supports SDHC, have multi-media features, and can run most games and homebrews.</p>
+     <!-- Slideshow container -->
+
 
     <br>
 
