--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   mod, modding, cfw, ntrboot, gm9, deypt9, backup,
 
   ">
-  <link href="style.css" rel = "stylesheet">
-  <script src="script.js"></script>
+  <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
+  <script src="https://projectr4vival.github.io/script.js"></script>
 </head>
 
 <body>
