--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <tr>
         <td id = "logo">
           <a href = "https://projectr4vival.github.io/">
-            <img src = "https://projectr4vival.github.io/logo.png">
+            <img src = "https://projectr4vival.github.io/logo.svg">
           </a>
         </td>
         <td align = right>
@@ -57,10 +57,10 @@
             <li><a href = "https://projectr4vival.github.io/dumping">Dumping</a></li>
             <li><a href = "https://projectr4vival.github.io/homebrew">Homebrew</a></li> 
             <li><a href = "https://projectr4vival.github.io/credits">Credits</a></li> 
-            <li><a href = "https://projectr4vival.github.io/discord" target = "_blank"><img src = "https://projectr4vival.github.io/discord.png"></a></li> 
+            <li><a href = "https://projectr4vival.github.io/discord" target = "_blank"><img src = "https://projectr4vival.github.io/discord.svg"></a></li> 
             <li> 
               <div class="dropdown">
-                <img src = "https://projectr4vival.github.io/language.png" onclick="showDropdown()" class="dropbtn">
+                <img src = "https://projectr4vival.github.io/language.svg" onclick="showDropdown()" class="dropbtn">
                   <div id="myDropdown" class="dropdown-content">
                     <a href="https://projectr4vival.github.io/">English</a>
                     <hr>
