--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -122,7 +122,7 @@
 
     <p><b>
       <a href = "https://web.archive.org/web/20120908033555/http://www.r4ultra.com/index.htm" target = "_blank">
-      Official Website <img src="https://projectr4vival.github.io/url.png" height="16px" style="padding-left: 3px">
+      Official Website <img src="https://projectr4vival.github.io/url.svg" height="16px" style="padding-left: 3px">
     </a>
     </b></p>
     
