--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   ">
   <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
   <script src="https://projectr4vival.github.io/script.js"></script>
+  <script src="https://projectr4vival.github.io/headerfooter.js"></script>
 </head>
 
 <body>
