--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   ">
   <link href="https://projectr4vival.github.io/style.css" rel = "stylesheet">
-  <script src="https://projectr4vival.github.io/script.js"></script>
+  <script src="https://projectr4vival.github.io/script.js" defer></script>
 </head>
 
 <body>
