--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="mySlides fade">
-              <img src="2.jpg" style="width:100%">
+              <img src="2.JPG" style="width:100%">
             </div>
 
             <div class="mySlides fade">
