Remove useless code

--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -65,7 +65,7 @@
           <div class="slideshow-container" id = "container">
 
             <!-- Full-width images with number and caption text -->
-            <div id = "slide1" class="mySlides fade">
+            <div class="mySlides fade">
               <img src="1.png" style="width:100%">
             </div>
 
