--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -60,13 +60,13 @@
          <p><h1>R4i Ultra</h1></p>
          <p>Lorem ispum roba random</p> 
         </td>
-        <td width="25%">
+        <td width="300px">
 
           <div class="slideshow-container" id = "container">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-              <img src="1.png" style="width:100%">
+              <img src="1.jpg" style="width:100%">
             </div>
 
             <div class="mySlides fade">
@@ -74,7 +74,15 @@
             </div>
 
             <div class="mySlides fade">
-              <img src="3.jpeg" style="width:100%">
+              <img src="3.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+              <img src="4.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides fade">
+              <img src="3.jpg" style="width:100%">
             </div>
 
             <!-- Next and previous buttons -->
