--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -60,7 +60,7 @@
     <br>
 
     <p><b>Description</b></p>
-    <p>R4 SDHC & R4i Ultra are SLOT-1 flashcards for NDS series consoles (the R4i supports DSi). They're the same size as an original card. R4 Ultra cards are an upgraded version of R4. They supports SDHC, have multi-media features, and can run most games and homebrews.</p>
+    <p>R4 SDHC & R4i Ultra are SLOT-1 flashcards for the Nintendo DS series consoles (the R4i supports DSi and 3DS). They're the same size as an original game cartridge. R4 Ultra cards are an upgraded version of R4. They supports SDHC, have multi-media features, and can run most games and homebrews.</p>
 
     <br>
 
