--- a/r4ultra/index.html
+++ b/r4ultra/index.html
@@ -69,6 +69,34 @@
 
     <br>
 
+    <p><b>Features</b></p>
+    <p><ul>
+      <li>Support SDHC memory cards (compatibility up to 32GB)</li>
+      <li>Change menu language as you want without any limit</li>
+      <li>Same size and thickness as an original card</li>
+      <li>No need to flash. Build-in launch Slot-2 (gba) function</li>
+      <li>Support DMA read and no lag when using any microSD card</li>
+      <li>Support FAT16 and FAT32 formats. Can transfer files with PC, PDA, Cellphone and Camera</li>
+      <li>Support drag-drop to play, with fast loading</li>
+      <li>Support NDS games</li>
+      <li>Write save files to TF card directly and no need manual backup or restore them</li>
+      <li>Auto save type detection and no need to update save type list database</li>
+      <li>Support moonshell and homebrews</li>
+      <li>Power saving design. Enter optimization mode automatically</li>
+      <li>Double screen UI. Support display thumbnails of games</li>
+      <li>Easy to use and setting</li>
+      <li>Support both button and touch operation</li>
+      <li>Support Wi-Fi, rumble package and browser expansion</li>
+      <li>Support changing menu background picture</li>
+      <li>Support changing menu font color</li>
+      <li>Support brightness adjustments (DS Lite only)</li>
+      <li>Support soft-reset</li>
+      <li>Support AR cheat code</li>
+      <li>Support moonshell 1.6 soft-reset (back to main menu of R4 Ultra)</li>
+      <li>Support DLDI auto-patching</li>
+      <li>Support Download play</li>
+    </ul>
+
     <p><i>This team has released two flashcards, choose which one you have.</i></p></p>
 
     <br>
