--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -46,17 +46,18 @@
 
   <div id = "content">
 
-    <table id = "container">
+    <!--<table id = "container">
       <tr>
         <td align = left style = "padding-left: 25px">
-          <img src="logo.png">
+          
         </td>
       </tr>
-    </table>
+    </table>-->
 
     <table width="100%">
       <tr>
         <td align = left style = "padding-left: 25px">
+         <img src="logo.png">
          <p><h1>R4i Ultra</h1></p>
          <p>Lorem ispum roba random</p> 
         </td>
