--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -57,7 +57,8 @@
     <table width="100%">
       <tr>
         <td align = left style = "padding-left: 25px">
-         <img src="logo.png">
+         <img src="logo.png" id="container">
+         <br>
          <p><h1>R4i Ultra</h1></p>
          <p>Lorem ispum roba random</p> 
         </td>
