--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -57,7 +57,7 @@
     <table width="100%">
       <tr>
         <td align = left style = "padding-left: 25px">
-         <img src="logo.png" id="container">
+         <img src="logo.png" id="container" style = "padding: 5px 5px 5px 5px">
          <br>
          <p><h1>R4i Ultra</h1></p>
          <p>Lorem ispum roba random</p> 
