--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -101,15 +101,21 @@
     </table>
 
     <br>
+    <br>
+
+    <p><h1><i><b>Kernels</b></i><h1></p>
 
     <br>
 
-    <p><b>Additional Informations</b></p>
-    <p>The R4 SDHC Ultra is an Acekard2 clone, while the R4i is an Acekard2i one.</p>
+    <p>AKAIO 1.8.6a - Recommended</p>
 
-    <br>
+    <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
 
-    <p><i>This team has released two flashcards, choose which one you have.</i></p></p>
+    <p>Setup</p>
+    <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
+    <img src="">
+
+    <p></p>
 
     <br>
 
