--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -103,11 +103,11 @@
     <br>
     <br>
 
-    <p><h1><i><b>Kernels</b></i></h1></p>
+    <p><h1><b>Kernels</b></h1></p>
 
     <br>
 
-    <p>AKAIO 1.8.6a - Recommended</p>
+    <p><i>AKAIO 1.8.6a - Recommended</i></p>
 
     <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
 
