--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -111,7 +111,7 @@
 
     <p><i>Setup</i></p>
     <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
-    <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg">
+    <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
 
     <p></p>
 
