--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -61,17 +61,6 @@
          <br>
          <p><h1>R4i Ultra</h1></p>
          <p>Lorem ispum roba random</p> 
-
-         <p><h1><i>Kernels</i></h1></p>
-
-    <p><b>AKAIO 1.8.6a - Recommended</b></p>
-
-    <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
-
-    <p><i>Setup</i></p>
-    <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
-    <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
-
         </td>
         <td width="300px">
 
@@ -94,6 +83,10 @@
               <img src="4.jpg" style="width:100%">
             </div>
 
+            <div class="mySlides fade">
+              <img src="5.jpg" style="width:100%">
+            </div>
+
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -105,16 +98,41 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
           </div> 
 
         </td> 
+      </tr>
+      <tr>
+        <td align = left>
+          <p><h1><i>Kernels</i></h1></p>
+
+          <p><b>AKAIO 1.8.6a - Recommended</b></p>
+
+          <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
+
+          <p><i>Setup</i></p>
+          <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
+          <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
+        </td>
+        <td>
+          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container">
+        </td>
       </tr>
     </table>
 
     <br>
     <br>
 
-    
+    <p><h1><i>Kernels</i></h1></p>
+
+    <p><b>AKAIO 1.8.6a - Recommended</b></p>
+
+    <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
+
+    <p><i>Setup</i></p>
+    <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
+    <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
 
     <p></p>
 
