--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -115,7 +115,7 @@
           <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
           <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
         </td>
-        <td>
+        <td width="300px">
           <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container">
         </td>
       </tr>
