--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -104,7 +104,7 @@
         </td> 
       </tr>
       <tr>
-        <td align = left>
+        <td align = left style="padding-right: 20px">
           <p><h1><i>Kernels</i></h1></p>
 
           <p><b>AKAIO 1.8.6a - Recommended</b></p>
