--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -103,10 +103,17 @@
 
         </td> 
       </tr>
+      
+    </table>
+
+    <br>
+    <br>
+
+    <p><h1><i>Kernels</i></h1></p>
+
+    <table>
       <tr>
         <td align = left style="padding-right: 20px">
-          <p><h1><i>Kernels</i></h1></p>
-
           <p><b>AKAIO 1.8.6a - Recommended</b></p>
 
           <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
@@ -120,32 +127,6 @@
         </td>
       </tr>
     </table>
-
-    <br>
-    <br>
-
-    <p><h1><i>Kernels</i></h1></p>
-
-    <p><b>AKAIO 1.8.6a - Recommended</b></p>
-
-    <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
-
-    <p><i>Setup</i></p>
-    <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
-    <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
-
-    <p></p>
-
-    <br>
-
-    <br>
-    <br>
-
-    <p><b>
-      <a href = "https://web.archive.org/web/20120908033555/http://www.r4ultra.com/index.htm" target = "_blank">
-      Official Website <img src="https://projectr4vival.github.io/url.svg" height="16px" style="padding-left: 3px">
-    </a>
-    </b></p>
     
 
   </div>
