--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -112,7 +112,7 @@
     <table>
       <tr>
         <td align = left style="padding-right: 60px">
-          <p><b>AKAIO 1.8.6a - Recommended</b></p>
+          <p id="title"><b>AKAIO 1.8.6a - Recommended</b></p>
 
           <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
 
