--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -121,6 +121,14 @@
           <p><i>Setup</i></p>
           <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
           <img src="https://projectr4vival.github.io/r4ultra/files_akaio.jpg" id="container">
+
+          <br>
+
+          <div id="button">
+            <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/AKAIO%201.8.6a.R4U.rar">
+              <img src="https://projectr4vival.github.io/download.jpg"> Download
+            </a>
+          </div>
         </td>
         <td>
           <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container" width="300px">
