--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -125,7 +125,7 @@
           <br>
           <br>
 
-          <div id="button" id="highlight">
+          <div id="button">
             <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/AKAIO%201.8.6a.R4U.rar">
               <img src="https://projectr4vival.github.io/download.svg" height="16px"> Download
             </a>
