--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -114,7 +114,11 @@
         <td align = left style="padding-right: 60px">
           <p id="title"><b>AKAIO 1.8.6a</b> <i>- Recommended</i></p>
 
-          <p>As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.</p>
+          <p>
+            As the R4i is an Acekard2i clone, a patched version of AKAIO has been released for it. 
+            <br>
+            Even if this is not the last AKAIO version, it's still the newest and recommended kernel for this flashcard.
+          </p>
 
           <br>
 
