--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -131,7 +131,7 @@
 
           <div id="button">
             <a href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/AKAIO%201.8.6a.R4U.rar?raw=true">
-              <img src="https://projectr4vival.github.io/download.svg" height="16px"> Download
+              <img src="https://projectr4vival.github.io/download.svg" height="20px"> <p id="title">Download</p>
             </a>
           </div>
         </td>
