--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -129,7 +129,7 @@
           <br>
           <br>
 
-          <div id="container">
+          <div id="button">
             <a id="title" href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/AKAIO%201.8.6a.R4U.rar?raw=true">
               <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download
             </a>
