--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -58,7 +58,9 @@
       <tr>
         <td align = left style = "padding-left: 25px">
          <p><h1>R4i Ultra</h1></p>
-         <p>Lorem ispum roba random</p> 
+         <ul>
+          <li><a href="#kernel">Kernel</a></li>
+        </ul>
         </td>
         <td width="300px">
 
@@ -107,7 +109,7 @@
     <br>
     <br>
 
-    <p><h1><i>Kernels</i></h1></p>
+    <p id="kernel"><h1><i>Kernel</i></h1></p>
 
     <table>
       <tr>
