--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -60,6 +60,9 @@
          <p><h1>R4i Ultra</h1></p>
          <ul>
           <li><a href="#kernel">Kernel</a></li>
+          <li><a href="#kernel">Firmware Update</a></li>
+          <li><a href="#kernel">Kernel</a></li>
+          <li><a href="#kernel">Kernel</a></li>
         </ul>
         </td>
         <td width="300px">
