--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -57,13 +57,14 @@
     <table width="100%">
       <tr>
         <td align = left style = "padding-left: 25px">
-         <p><h1>R4i Ultra</h1></p>
-         <ul>
-          <li><a href="#kernel">Kernel</a></li>
-          <li><a href="#kernel">Firmware Update</a></li>
-          <li><a href="#kernel">Kernel</a></li>
-          <li><a href="#kernel">Kernel</a></li>
-        </ul>
+          <div id="container"><img src="logo.png"></div> 
+          <p><h1>R4i Ultra</h1></p>
+          <ul>
+            <li><a href="#kernel">Kernel</a></li>
+            <li><a href="#kernel">Firmware Update</a></li>
+            <li><a href="#kernel">Kernel</a></li>
+            <li><a href="#kernel">Kernel</a></li>
+          </ul>
         </td>
         <td width="300px">
 
