--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -57,7 +57,7 @@
     <table width="100%">
       <tr>
         <td align = left style = "padding-left: 25px">
-          <div id="container"><img src="logo.png"></div> 
+          <img src="logo.png" id="container">
           <p><h1>R4i Ultra</h1></p>
           <ul>
             <li><a href="#kernel">Kernel</a></li>
