--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -56,7 +56,7 @@
 
     <table width="100%">
       <tr>
-        <td align = left style = "padding-left: 25px">
+        <td align = left>
           <img src="logo.png" id="container" style="padding: 20px 20px 20px 20px">
           <p><h1>R4i Ultra</h1></p>
           <ul>
