Added R4i YSMenu table

--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -146,6 +146,34 @@
         </td>
       </tr>
     </table>
+
+    <table>
+      <tr>
+        <td align = left style="padding-right: 60px">
+          <p id="title"><b>YSMenu</b></p>
+
+          <p>This is an old version of the unofficial YSMenu kernel, working on the R4i Ultra.</p>
+
+          <br>
+
+          <p><i>Setup</i></p>
+          <p>To install the kernel, extract the archive and place this files in the root of your sd card.</p>
+          <img src="https://projectr4vival.github.io/r4ultra/files_ysmenu.jpg" id="container">
+
+          <br>
+          <br>
+
+          <a id="title" href="https://github.com/projectr4vival/flashcard-database/blob/main/r4ultra.com/R4i/YSMenu20171225.rar?raw=true">
+            <div id="button">
+              <img src="https://projectr4vival.github.io/download.svg" height="20px"> Download
+            </div>
+          </a>
+        </td>
+        <td>
+          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container" width="300px">
+        </td>
+      </tr>
+    </table>
     
 
   </div>
