--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -115,7 +115,7 @@
 
     <p id="kernel"><h1><i>Kernel</i></h1></p>
 
-    <table>
+    <table width="100%">
       <tr>
         <td align = left style="padding-right: 60px">
           <p id="title"><b>AKAIO 1.8.6a</b> <i>- Recommended</i></p>
@@ -147,7 +147,10 @@
       </tr>
     </table>
 
-    <table>
+    <br>
+    <br>
+
+    <table width="100%">
       <tr>
         <td align = left style="padding-right: 60px">
           <p id="title"><b>YSMenu</b></p>
