--- a/r4ultra/r4i.html
+++ b/r4ultra/r4i.html
@@ -133,8 +133,8 @@
             </div>
           </a>
         </td>
-        <td>
-          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container" width="300px">
+        <td width="300px">
+          <img src="https://projectr4vival.github.io/r4ultra/akaio.jpg" id="container">
         </td>
       </tr>
     </table>
@@ -165,8 +165,8 @@
             </div>
           </a>
         </td>
-        <td>
-          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container" width="300px">
+        <td width="300px">
+          <img src="https://projectr4vival.github.io/r4ultra/ysmenu.jpg" id="container">
         </td>
       </tr>
     </table>
